--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kalkulator</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="Kalkulator/stylesheet.css">
 </head>
 <body>
     <h1>@albikhairul Calculator</h1>
@@ -41,6 +41,6 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="Kalkulator/script.js"></script>
 </body>
 </html>
